# vpp

./: .gitmodules  BUILD_SYSTEM_PLAN.md  STANDALONE_AWG_VPN_COMPLETE_SPEC.md  USERSPACE_AWG_ARCHITECTURE_DIAGRAM.txt  USERSPACE_AWG_NETWORK_STACK_DESIGN.md
awg-vpn-standalone/: BUILD_STATUS.md  CMakeLists.txt  DETAILED_REVIEW.md  README.md  TEST_RESULTS.md
awg-vpn-standalone/include/vlib/: vlib.h
awg-vpn-standalone/include/vnet/: buffer.h  vnet.h
awg-vpn-standalone/include/vnet/crypto/: crypto.h
awg-vpn-standalone/include/vnet/ip/: ip46_address.h
awg-vpn-standalone/include/vppinfra/: byte_order.h  clib.h  format.h  lock.h  mem.h  pool.h  random.h  string.h  time.h  tw_timer_16t_2w_512sl.h  types.h  vec.h
awg-vpn-standalone/src/: vnet_crypto_stub.c
awg-vpn-standalone/src/awg/: wireguard_awg.c  wireguard_awg.h  wireguard_awg_tags.c
awg-vpn-standalone/src/blake/: blake2-impl.h  blake2s.c  blake2s.h
awg-vpn-standalone/src/wireguard/: wireguard.h  wireguard_chachapoly.c  wireguard_cookie.c  wireguard_cookie.h  wireguard_key.c  wireguard_messages.h  wireguard_noise.c  wireguard_noise.h
awg-vpn-standalone/tests/: test_blake2s.c
src/plugins/outline_server/: CMakeLists.txt  FEATURE.yaml  README.md  outline_server.api  outline_server.c  outline_server.h  outline_server_api.c  outline_server_cli.c
src/plugins/singbox/: CMakeLists.txt  FEATURE.yaml  PROTOCOL_GUIDE.md  README.md  node.c  session.c  singbox.api  singbox.c  singbox.h  socks5.c  socks5_server.c
src/plugins/wireguard/: README.rst
